# macropad

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
ViGEmClient/: CMakeLists.txt
include/: gamepad.hpp  input.hpp  menu.hpp  player.hpp  recorder.hpp  structs_and_consts.hpp
src/: main.cpp  menu.cpp  player.cpp  recorder.cpp
